Сделал unit-тесты для метрик. Добавил интеграционные тесты